removed background attatchjmnent fixed. was causing distorted image on iphone

--- a/main.css
+++ b/main.css
@@ -565,7 +565,7 @@ footer::before {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     perspective: 2000px;
   }
   /* .hero::before {
